<resources>
    <string name="app_name">Disaster</string>
    <string name="your_location">Your Location</string>
    <string name="disaster_info">Informasi Bencana Terkini</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="settings">Settings</string>

    <string name="created_by">By: %s</string>
    <string name="created_at">(%s)</string>
    <string name="status">Status: %s</string>
    <string name="location">Location: %s</string>
    <string name="no_photo">No Photo</string>
    <string name="no_data">No Data</string>

    <string name="flood">Flood</string>
    <string name="earthquake">Earthquake</string>
    <string name="fire">Fire</string>
    <string name="haze">Haze</string>
    <string name="wind">Wind</string>
    <string name="volcano">Volcano</string>

    <string name="search_view_hint">Search province</string>
    <string name="water_level_notification_title">Water Level Warning</string>
    <string name="water_level_notification_description">Notification based on water level</string>
    <string name="failed_to_get_data">Failed to get data</string>
    <string name="tma_status">%s berada pada status %s</string>
</resources>