<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map_fragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@android:color/black" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_area"
            style="@style/SpinnerBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/img_btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/circle_button_settings"
            android:backgroundTint="@color/green"
            android:contentDescription="@string/settings"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_settings" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_area">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_disaster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_flood"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flood" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_earthquake"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/earthquake" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_fire"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fire" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_haze"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/haze" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_wind"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_volcano"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/volcano" />

            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <include
        android:id="@+id/bottom_sheet"
        layout="@layout/disaster_info_bottom_sheet" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>